<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="football_scores_app">FOOTBALL SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
</resources>
