<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.db400s3a.test.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/btn_spotify"
        style="@style/Widget.Button1"
        android:text="@string/spotify_streamer"
        android:onClick="onClick1"/>

    <Button
        android:id="@+id/btn_football"
        style="@style/Widget.Button1"
        android:text="@string/football_scores_app"
        android:onClick="onClick2"/>

    <Button
        android:id="@+id/btn_library"
        style="@style/Widget.Button1"
        android:text="@string/library_app"
        android:onClick="onClick3"/>

    <Button
        android:id="@+id/btn_build"
        style="@style/Widget.Button1"
        android:text="@string/build_it_bigger"
        android:onClick="onClick4"/>

    <Button
        android:id="@+id/btn_xyz"
        style="@style/Widget.Button1"
        android:text="@string/xyz_reader"
        android:onClick="onClick5"/>

    <Button
        android:id="@+id/btn_capstone"
        style="@style/Widget.Button2"
        android:text="@string/capstone"
        android:onClick="onClick6"/>
</LinearLayout>
